// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<I18nProvider> children get i18n from I18nProvider 1`] = `
<UNDEFINED
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
/>
`;

exports[`<I18nProvider> children get i18n from I18nProvider 2`] = `
<I18nProvider
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
>
  <ForwardRef
    testProp="required"
  >
    <Translate(TestElement)
      forwardedRef={null}
      testProp="required"
    >
      <TestElement
        i18n={
          Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          }
        }
        testProp="required"
      >
        <div>
          Test
        </div>
      </TestElement>
    </Translate(TestElement)>
  </ForwardRef>
</I18nProvider>
`;

exports[`translate Component render anonymous component 1`] = `
<ForwardRef
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
>
  <Translate(Component)
    forwardedRef={null}
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    testProp="required"
  >
    <Component
      i18n={
        Object {
          "gettext": [Function],
          "lang": "en-US",
          "ngettext": [Function],
          "npgettext": [Function],
          "pgettext": [Function],
        }
      }
      testProp="required"
    >
      <div>
        My
        required
      </div>
    </Component>
  </Translate(Component)>
</ForwardRef>
`;

exports[`translate Component render translated component 1`] = `
<Translate(TestElement)
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
>
  <TestElement
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    testProp="required"
  >
    <div>
      Test
    </div>
  </TestElement>
</Translate(TestElement)>
`;

exports[`translate Component render translated stateless component 1`] = `
<ForwardRef
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
>
  <Translate(StatelessTest)
    forwardedRef={null}
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    testProp="required"
  >
    <StatelessTest
      i18n={
        Object {
          "gettext": [Function],
          "lang": "en-US",
          "ngettext": [Function],
          "npgettext": [Function],
          "pgettext": [Function],
        }
      }
      testProp="required"
    >
      <div>
        My
        required
      </div>
    </StatelessTest>
  </Translate(StatelessTest)>
</ForwardRef>
`;
